# HugeCTR

./: .gitignore  .gitmodules  CMakeLists.txt
HugeCTR/include/hps/: direct_map_backend.hpp  embedding_cache_base.hpp  hier_parameter_server.hpp  hier_parameter_server_base.hpp  inference_utils.hpp  lookup_session_base.hpp  modelloader.hpp
HugeCTR/src/hps/: CMakeLists.txt  direct_map_backend.cpp  embedding_cache.cpp  hier_parameter_server.cpp  inference_utils.cpp  inference_utils.cu  lookup_session.cpp  modelloader.cpp
gpu_cache/include/: nv_gpu_cache.hpp
gpu_cache/src/: nv_gpu_cache.cu
hierarchical_parameter_server/: CMakeLists.txt  setup.py
hierarchical_parameter_server/hierarchical_parameter_server/: __init__.py  hps_lib.py
hierarchical_parameter_server/hierarchical_parameter_server/core/: initialize.py  lookup_layer.py  lookup_ops.py  sparse_lookup_layer.py
hierarchical_parameter_server/notebooks/: README.md  hps_multi_table_sparse_input_demo_multigpu_tfstrategy_inference_main.py  multi_table_sparse_input.json
hierarchical_parameter_server/notebooks/common_model/: dlrm.py  inference_model.py
hierarchical_parameter_server/notebooks/hierarchical_parameter_server_demo/: infer.py  naive_dnn.json  train.py
hierarchical_parameter_server/notebooks/hps_lookup_layer_multigpu_demo/: dnn.json  infer.py  train.py
hierarchical_parameter_server/notebooks/hps_multi_table_sparse_input_demo/: infer.py  multi_table_sparse_input.json  train.py
hierarchical_parameter_server/notebooks/hps_sparse_lookup_layer_multigpu_demo/: dnn.json  infer.py  train.py
hierarchical_parameter_server/notebooks/simple_dlrm/: dlrm.json  ds_writer.py  inference.py  train.py
hierarchical_parameter_server/notebooks/simple_dlrm_meepo5/: dlrm.json  inference_onthefly.py
hierarchical_parameter_server/notebooks/sok_to_hps_dlrm_criteo/: dlrm.json  inference.py  sok_to_hps_dlrm_criteo.ipynb  train.py
hierarchical_parameter_server/notebooks/sok_to_hps_dlrm_criteo_dense/: dlrm.json  ds_writer.py  inference.py  inference_per_replica.py  train.py
hierarchical_parameter_server/notebooks/sok_to_hps_dlrm_criteo_multi_worker/: criteo_full.yaml  dlrm.json  ds_writer.py  inference.py  inference_per_replica.py  note.md
paper-fig-parse/micro-comm-4v100/: parser.py
paper-fig-parse/micro-comm-8a100/: parser.py
sparse_operation_kit/: .gitignore  CMakeLists.txt
sparse_operation_kit/kit_cc_impl/operations/: CMakeLists.txt
sparse_operation_kit/sparse_operation_kit/: __init__.py  kit_lib.py
sparse_operation_kit/sparse_operation_kit/core/: initialize.py
sparse_operation_kit/unit_test/: CMakeLists.txt
study/common/: common_parser.py  runner_helper.py
study/examples/: common_config.py  ds_generator.py  inference.py  model_zoo.py  tfrs_dcn.py
study/exp-coll-hard-wire-8-a100/: runner.py
study/exp-coll-switch-8-a100/: parser.py  runner.py
study/exp-hps-cache-statistic-8a100/: parser.py  plot.plt  runner.py
study/exp-micro-comm-4v100/: parser.py  runner.py
study/exp-micro-comm-8a100/: parser.py  runner.py
study/exp-overview-4v100/: gnuplot.plt  parser.py  runner.py
study/exp-overview-8a100/: gnuplot.plt  parser.py  runner.py
study/exp-overview-8v100/: gnuplot.plt  parser.py  runner.py
study/exp-refresh-8a100/: gnuplot.plt  parser.py  runner.py
study/exp-tech-break-4v100/: gnuplot.plt  parser.py  run-logs-backup-12-11  runner.py
study/validate-runner-switch/: runner.py  runner_criteo.py
test/utest/hps/: .gitignore  CMakeLists.txt  parameter_server_access_test.cpp  parameter_server_access_test.json
tools/criteo_slice_processed/: main.cc
tools/dockerfiles/: dockerfile.contribute.sxn.tf
tools/sparse_embedding_to_dense/: CMakeLists.txt  main.cc
(+33 files in other folders)
